# PipeWatch

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/v1/: alerts.py  ingest.py  query.py
app/middleware/: metrics.py
app/models/: log_entry.py
app/services/: alert_engine.py  clickhouse.py  stream.py
app/ws/: live_tail.py
cli/: pipewatch.py  pyproject.toml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: pipewatch.json
monitoring/grafana/provisioning/dashboards/: pipewatch.yml
tests/: test_ingest_query_verify.py  test_query_filters.py  test_ws_tail.py
