[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pipewatch"
version = "0.1.0"
description = "PipeWatch log aggregator CLI"
requires-python = ">=3.10"
dependencies = [
    "click>=8",
    "httpx>=0.24",
    "websockets>=11",
    "rich>=13",
]

[project.scripts]
pipewatch = "pipewatch:cli"

[tool.setuptools]
py-modules = ["pipewatch"]
